# ByteTrack-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
data/YOLOX_ncnn_palace/: detection_results.json  tracking_results.json
include/: BYTETracker.h  STrack.h  dataType.h  kalmanFilter.h  lapjv.h
include/ByteTrack/: BYTETracker.h  KalmanFilter.h  Object.h  Rect.h  STrack.h  dataType.h  kalmanFilter.h  lapjv.h
src/: BYTETracker.cpp  KalmanFilter.cpp  Object.cpp  Rect.cpp  STrack.cpp  kalmanFilter.cpp  lapjv.cpp  utils.cpp
test/: test_BYTETracker.cpp
